Delete NEC page layout

--- a/nec.html
+++ b/nec.html
@@ -1,12 +1,13 @@
 ---
-layout: index
+layout: default
 title: Executive Committee
 description: Information about the executive committee of Zimsa Website.
+image: /assets/img/logos/scome.png
 permalink: "/nec"
 ---
 
 <div class="container">
-    <div class="m-3 align-content-center text-center">
+  <div class="m-3 align-content-center text-center">
       <h1>2023/2024 National Executive Committee</h1>
       <p>The people you voted for...</p>
     </div>
