--- a/nec.html
+++ b/nec.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: post-layout
 title: Executive Committee
 description: Information about the executive committee of Zimsa Website.
 image: /assets/img/logos/scome.png
