Update permalink in nec.html

--- a/nec.html
+++ b/nec.html
@@ -1,9 +1,9 @@
 ---
-layout: post-layout
+layout: default
 title: Executive Committee
 description: Information about the executive committee of Zimsa Website.
 image: /assets/img/logos/scome.png
-permalink: "/nec"
+permalink: /nec
 ---
 
 <div class="container">
