edited location of data

--- a/nec.html
+++ b/nec.html
@@ -18,7 +18,7 @@ image: "/assets/img/logos/scome.png"
 
   
       <div class="row gy-4">
-        {% for member in site.data.execcommittee %}
+        {% for member in site.committee %}
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="team-member d-flex align-items-start">
               <div class="pic"><img src="{{ member.image }}" class="img-fluid" alt=""></div>
